--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 python = "^3.11"
 nnsight = "^0.2.12"
 rich = "^13.7.1"
-circuitsvis = "^1.43.2"
 einops = "^0.7.0"
 ipykernel = "^6.29.4"
 transformers = "^4.40.0"
@@ -22,6 +21,11 @@ pyarrow = "^16.0.0"
 typer = "^0.12.3"
 kaleido = "0.2.1"
 jsonpickle = "^3.0.4"
+torch = "2.2.2"
+
+packages = [
+    { include = "src" },
+]
 
 
 [build-system]
