Add scores and plots for gender

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "eth-supervised-research"
 version = "0.1.0"
 dependencies = [
+    "datasets",
     "einops",
     "ipykernel",
     "ipywidgets",
