--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "polars",
     "pyarrow",
     "rich",
+    "sae-lens",
+    "umap-learn",
     "torch==2.2.2",
     "transformers",
     "typer",
